[FLINK-1291] Remove default GC options from the shell scripts